--- a/src/assets/Vars.scss
+++ b/src/assets/Vars.scss
@@ -4,6 +4,7 @@ $black: #000;
 $white: #fff;
 
 $grey: #D8EADB;
+$lightGrey: #F2F2F2;
 $blue: #114D46;
 $green: #6DA830;
-$lightgreen: #62BB65;
+$lightGreen: #62BB65;
