--- a/src/assets/Vars.scss
+++ b/src/assets/Vars.scss
@@ -7,4 +7,5 @@ $grey: #D8EADB;
 $lightGrey: #F2F2F2;
 $blue: #114D46;
 $green: #6DA830;
-$lightGreen: #62BB65;
+$lightGreen: #62BB65; 
+$bgGreen: #D8EADB;
