--- a/src/assets/Vars.scss
+++ b/src/assets/Vars.scss
@@ -5,7 +5,7 @@ $white: #fff;
 
 $grey: #D8EADB;
 $lightGrey: #F2F2F2;
-$blue: #114D46;
+$darkGreen: #114D46;
 $green: #6DA830;
 $lightGreen: #62BB65; 
 $bgGreen: #D8EADB;
