--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
     position: relative;
     .container {
         position: absolute;
-        bottom: -4rem;
+        bottom: -5rem;
         left:0;
         right:0;
         padding: 3rem;
@@ -24,7 +24,9 @@
             justify-content: center;
             gap: 1rem;
             a {
-                background-color: $blue;
+                background-color: $darkGreen;
+                width: 30%;
+                min-width: 15%;
                 padding: 10px 15px;
                 color: $white;
                 text-align: center;
