--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,6 +2,7 @@
 
 .hero {
     position: relative;
+    margin-bottom: 11vh;
     .container {
         position: absolute;
         bottom: -5rem;
@@ -13,7 +14,7 @@
         background-color: $grey;
         border-radius: 8px;
         z-index: 1;
-        h2 {
+        h1 {
             font-size: 1.5rem;
             font-weight: 400;
             text-align: center;
