--- a/src/assets/Vars.scss
+++ b/src/assets/Vars.scss
@@ -1,11 +1,20 @@
 
-// Colors
+//Standard colors
 $black: #000;
 $white: #fff;
 
+//often used colors
 $grey: #D8EADB;
 $lightGrey: #F2F2F2;
 $darkGreen: #114D46;
 $green: #6DA830;
 $lightGreen: #62BB65; 
-$bgGreen: #D8EADB;
+
+//font colors
+$fontH: #222A41;
+$fontP: #888888;
+
+//Background colors
+$backgroundGreen: #62BB6533;
+$backgroundWhite: #62BB6500;
+
