--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .hero {
     position: relative;
-    margin-bottom: 11vh;
+    margin-bottom: 15vh;
     .container {
         position: absolute;
         bottom: -5rem;
@@ -17,6 +17,7 @@
         h1 {
             font-size: 1.5rem;
             font-weight: 400;
+            color: $fontH;
             text-align: center;
             margin-bottom: 1rem;
         }
