--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,7 +9,7 @@
     margin: 3rem 1rem 0 1rem;
     padding-top: 0.5rem;
 
-    ul {    
+    .mainNav {    
         display: flex;
         li {
             list-style: none;
@@ -33,12 +33,24 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: $bgGreen;
+        background-color: $grey;
         width: 30px;
         height: 30px;
          border-radius: 50%;
         img {
             width: 1rem;
+        }
+    }
+}
+
+@media only screen and (max-width: 880px) {
+    .navContainer {
+        display: flex;
+        .mainNav {
+            display: none;
+        }
+        .imageContainer {
+            display: none;
         }
     }
 }
