--- a/src/assets/Vars.scss
+++ b/src/assets/Vars.scss
@@ -13,6 +13,8 @@ $lightGreen: #62BB65;
 //font colors
 $fontH: #222A41;
 $fontP: #888888;
+$fontGreen: #119B1E;
+$fontDarkGreen: #0E4F2D;
 
 //Background colors
 $backgroundGreen: #62BB6533;
