--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import "./assets/Vars.scss";
 
 *{
     margin: 0;
@@ -6,3 +7,7 @@
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
 }   
+
+body{
+    background-image: linear-gradient(rgb(98,187,101, 7%), $white);
+  }
