--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -5,6 +5,9 @@
 }
 
 @media only screen and (max-width: 880px) {
+    body {
+        overflow-x: hidden;
+    }
     .menuStyles {
         display: flex;
         position: absolute;
@@ -12,7 +15,7 @@
         justify-content: space-between;
         width: 1.5rem;
         height: 1.2rem;
-        top: 3.6rem;
+        top: 3.5rem;
         right: 3rem;
         cursor: pointer;
         span {
@@ -20,10 +23,78 @@
             width: 100%;
             background-color: $lightGreen;
             border-radius: 0.2rem;
+            transition: all 0.3s ease-in-out;
         }
     }
-    .open {
+
+    .start {
+        
+        span:nth-child(1) {
+            transform: rotate(45deg) translate(-3.5px, 12.1px);
+            transition: ease-out 0.3s;
+        }
+        span:nth-child(2) {
+            transform: scale(0);
+            transition: ease-out 0.3s;
+
+        }
+        span:nth-child(3) {
+            transform: rotate(135deg) translate(0.9px, 15px);
+            transition: ease-out 0.3s;
+        }
+    }
+   
+    .burgerNav {
         display: flex;
+        position: absolute;
+        right: 0;
         flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly    ;
+        background-color: $white;
+        height: 89vh;
+        width: 100%;
+        z-index: 2;
+        transform: translateX(100%);
+        transition: transform 0.8s ease-in-out;
+        li {
+            list-style: none;
+            a {
+                color: $black;
+                text-decoration: none;
+                div {
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                }
+                &.active {
+                    color: $lightGreen;
+                }
+                
+            }
+            
+        }
+        .imageContainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $grey;
+            width: 40px;
+            height: 40px;
+            height: px;
+             border-radius: 50%;
+            img {
+                width: 2rem;
+            }
+            .profileImg {
+                width: 1.5rem;
+            }
+        }
+        
+    }
+    .open {
+        transform:translateX(0%) ;
+        
     }
 }
+
