--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
 }
 .navContainer {
     display: grid;
+    position: relative;
     grid-template-columns: 20% auto 20%;
     align-items: center;
     justify-items: center;
@@ -23,11 +24,10 @@
                 color: $black;
                 text-decoration: none;
                 padding: 0 1rem;
-                transition: all 0.2s ease-in-out;
                 &.active {
+                    padding: 1.257rem;
+                    border-top: 2px solid $green;
                     color: $green;
-                    padding-top: 1.3rem;
-                    border-top: solid 2px;
                 }
                 &:hover {
                     color: $green;
@@ -42,9 +42,13 @@
         background-color: $grey;
         width: 30px;
         height: 30px;
+        height: px;
          border-radius: 50%;
         img {
             width: 1rem;
+        }
+        .profileImg {
+            width: 1.2rem;
         }
     }
 }
