--- a/src/pages/Sortering/Sortering.module.scss
+++ b/src/pages/Sortering/Sortering.module.scss
@@ -1,5 +1,6 @@
 @import "../../assets//Vars.scss";
-
+.fullContainer {
+   min-height: 60vh;
 .sectionContainer {
    display: flex;
    flex-direction: column;
@@ -21,10 +22,13 @@
   input[type=search] {
    width: 30vw;
    height: 3vh;
+   margin-bottom: 4rem;
+   padding: 10px;
    border: none;
    border-radius: 20px;
    box-shadow: 0 0 15px -7px rgba(0, 0, 0, 1);
-   padding: 10px;
+   
+
   }
 }
 
@@ -66,6 +70,7 @@
    &:hover {
       transform: scale(1.1);
    }
+}
 }
 }
 
