--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -31,3 +31,21 @@ footer {
             }
         }
 }
+
+@media only screen and (max-width: 880px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+
+        .logoSection {
+            width: 100%;
+            div {
+                margin-bottom: 0.5rem;
+            }
+
+        }
+        .backToTop {
+            margin-top: 2rem;
+        }
+    }
+}
