--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,14 +27,33 @@
             gap: 1rem;
             a {
                 background-color: $darkGreen;
-                width: 30%;
-                min-width: 15%;
+                width: 15rem;
                 padding: 10px 15px;
                 color: $white;
                 text-align: center;
                 text-decoration: none;
                 border-radius: 4px;
+               
             }
+        }
+    }
+}
+
+@media only screen and (max-width: 1174px) {
+    .hero {
+        .container {
+            width: 40%;
+        }
+    }
+}
+
+@media only screen and (max-width: 888px) {
+    .hero {
+        margin-bottom: 5vh;
+        .container {
+            position: static;
+            width: 100%;
+            border-radius: 0 0 8px 8px;
         }
     }
 }
