--- a/src/pages/Frontpage/Frontpage.module.scss
+++ b/src/pages/Frontpage/Frontpage.module.scss
@@ -77,3 +77,39 @@
     }
 
 }
+
+
+@media only screen and (max-width: 1264px) {
+    .sectionContainer {
+        max-width: 800px;
+        article {
+            h2 {
+                font-size: 2rem;
+            }
+            p {
+                font-size: 1rem;
+            }
+        }
+        figure {
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .sectionContainer {
+        grid-template-columns: 1fr;
+        article {
+            margin-top: 0;
+            align-items: center;
+            p {
+                margin: 1rem 0 1.5rem 0;
+            }
+            .btnContainer {
+                justify-content: center;
+            }
+        }
+    }
+}
