--- a/src/pages/Sortering/Sortering.module.scss
+++ b/src/pages/Sortering/Sortering.module.scss
@@ -20,8 +20,8 @@
     }
    }
   input[type=search] {
-   width: 30vw;
-   height: 3vh;
+   width: 40rem;
+   height: 4vh;
    margin-bottom: 4rem;
    padding: 10px;
    border: none;
@@ -37,7 +37,7 @@
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem 2rem;
    margin: 2rem auto;
-   max-width: 1200px;
+   max-width: 1000px;
    
 
    figure {
@@ -72,5 +72,46 @@
    }
 }
 }
+}
+
+@media only screen and (max-width: 1025px) { 
+   .fullContainer {
+      .figContainer {
+         grid-template-columns: repeat(2, 1fr);
+         max-width: 700px;
+      }
+   }
+
+}
+
+@media only screen and (max-width: 725px) { 
+   
+   
+   
+   .fullContainer {
+      .sectionContainer {
+         .headerGroup {
+            h1 {
+               font-size: 1.5rem;
+            }
+            h2 {
+               font-size: 1.2rem;
+            }
+         }
+         input[type=search] {
+            width: 80vw;
+            height: 4vh;
+            margin-bottom: 4rem;
+         
+           }
+      }
+      .figContainer {
+         grid-template-columns: 1fr;
+         max-width: 320px;
+
+      }
+
+   }
+
 }
 
