--- a/src/pages/Sortering/SorteringDetails/SorteringDetails.module.scss
+++ b/src/pages/Sortering/SorteringDetails/SorteringDetails.module.scss
@@ -1,7 +1,7 @@
 @import "../../../assets//Vars.scss";
 
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 10vh auto;
     border: 2px solid #00000029;
     border-radius: 20px;
@@ -30,6 +30,38 @@
         }
         h2 {
             margin-left: 1%;
+        }
+    }
+}
+
+@media only screen and (max-width: 1025px) { 
+
+    .container {
+        max-width: 700px;
+    }
+}
+
+@media only screen and (max-width: 725px) { 
+    .container {
+        max-width: 425px;
+        .heading {
+            margin-bottom: 1rem;
+            flex-direction: column;
+            img {
+               width: 100%;
+                border-radius: 0;
+            }
+            h1 {
+                margin: 0.5rem 0;
+                font-size: 1.5rem;
+            }
+        }
+    }
+    figure {
+        flex-direction: column;
+        h2 {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
         }
     }
 }
