--- a/src/pages/Stationer/Stationer.module.scss
+++ b/src/pages/Stationer/Stationer.module.scss
@@ -15,6 +15,9 @@
             border: none;
             border-radius: 10px 10px 0 0; 
             width: 100%;
+            zoom: 1.5; 
+            -moz-transform: scale(0.75); 
+            -moz-transform-origin: 0 0; 
         }
         a {
             text-decoration: none;
