--- a/src/pages/Stationer/Stationer.module.scss
+++ b/src/pages/Stationer/Stationer.module.scss
@@ -1,6 +1,6 @@
 @import "../../assets//Vars.scss";
 
-.wrapper {
+.mainContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
@@ -15,9 +15,7 @@
             border: none;
             border-radius: 10px 10px 0 0; 
             width: 100%;
-            zoom: 1.5; 
-            -moz-transform: scale(0.75); 
-            -moz-transform-origin: 0 0; 
+            zoom: 1.5;
         }
         a {
             text-decoration: none;
@@ -43,5 +41,21 @@
             } 
         }
     }
+   
+    }
+}
+
+@media only screen and (max-width: 1225px) { 
+    .mainContainer {
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 700px;
+    }
+}
+
+
+@media only screen and (max-width: 725px) { 
+    .mainContainer {
+        grid-template-columns: (1fr);
+        max-width: 400px;
     }
 }
