--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -33,6 +33,10 @@
                 text-align: center;
                 text-decoration: none;
                 border-radius: 4px;
+                transition: 0.5s ease-in-out;
+                &:hover {
+                    background-color: $lightGreen ;
+                }
                
             }
         }
