--- a/src/pages/Stationer/StationerDetails/StationerDetails.module.scss
+++ b/src/pages/Stationer/StationerDetails/StationerDetails.module.scss
@@ -35,6 +35,10 @@
         margin-left: 2.5%;
     }
 }
+
+.wave {
+    width: 100%;
+}
 @media only screen and (max-width: 1025px) { 
     .locationContainer {
         max-width: 600px;
